write blockchain and blockbase

--- a/src/4.0组件.md
+++ b/src/4.0组件.md
@@ -5,7 +5,7 @@
 #### 核心组件
 以下的 `blockchain`，`blockbase`，`txpool` 均为interface， 内置默认的实现， 如果开发者有特殊需求，可自行重新实现interface
 - blockchain: 链结构，负责存储区块数据 并 组织链结构与分叉逻辑。   
-- blockbase: 链库，存储所有区块中的具体交易数据、 交易执行后的 `event` 和 `error`。   
+- blockbase: 区块库，存储所有区块中的具体交易数据、 交易执行后的 `event` 和 `error`。   
 - txpool: 交易池，负责验证和缓存从外部发来的交易。
 - state: 存储状态， 储存着每个交易执行后的状态，比如账户余额等。    
 - tripod: 运行区块链 和 供开发者定制逻辑 的 基本最小单元， 开发者可以定制多个tripod并将他们排序组合装载入`land`里供框架调用。  
