--- a/src/4.1blockchain.md
+++ b/src/4.1blockchain.md
@@ -1,3 +1,63 @@
-# 区块链结构
-接口代码定义在[这里](https://github.com/Lawliet-Chan/yu/blob/master/blockchain/interfaces.go#L51)
+# 区块链  
+`blockchain`组件内部有两个部分构成，一部分缓存区，专门用来储存来自P2P网络中发送来的区块数据（存入缓存区之前已经经过验证）以备处理。另一个部分
+就是真正的区块链持久化存储，全网统一维护的链结构。  
 
+
+
+
+
+### 接口  
+代码在[这里](https://github.com/Lawliet-Chan/yu/blob/master/blockchain/interfaces.go#L51)  
+`blockchain`实现了基本的链结构的存储和处理逻辑。以下为核心功能的接口，开发者如有需求，可自行定制属于自己的链存储方式和处理逻辑： 
+
+```
+func ConvergeType() ConvergeType
+```
+`ConvergeType()`返回链的收敛类型（即区块以何种形式被最终确定下来） 
+众所周知，在区块链中，同一个时刻是可能有多个节点出块的，因此形成分叉。 如果不收敛，系统会不知道哪条链为主链的。所以需要收敛，而收敛方式目前最常见的有几种：  
+最长子链(Longest)： 最长的那条分支会被认为是主链，该方式会被回滚。    
+最重子链(Heaviest): 子链数量最多的分叉会被认为是主链， 该方式会被回滚。    
+敲定(Finalize): 通过投票等方式对区块或者链进行投票 来最终敲定某个分叉成为主链，正常情况下被敲定的区块无法被回滚。   
+
+---
+```
+func GetGenesis() (IBlock, error)
+func SetGenesis(b IBlock) error
+```
+从链内获取创世区块，把创世区块存入链。
+
+
+---
+```
+func InsertBlockFromP2P(ib IBlock) error
+
+func TakeP2pBlocksBefore(height BlockNum) (map[BlockNum][]IBlock, error)
+
+func TakeP2pBlocks(height BlockNum) ([]IBlock, error)
+```  
+`InsertBlockFromP2P(block)`将从P2P网络收到的经过验证的区块纳入一个缓存区，以备后续处理。  
+`TakeP2pBlocksBefore(height)`将从上述缓存区取走高度 < `height`的所有区块。  
+`TakeP2pBlocks(height)`将从上述缓存区取走高度 = `height`的所有区块。
+
+---
+```
+func AppendBlock(b IBlock) error
+
+func GetBlock(blockHash Hash) (IBlock, error)
+
+func UpdateBlock(b IBlock) error
+```
+`AppendBlock(block)`将区块加入到链的末尾  
+`GetBlock(blockHash)`根据区块哈希获取具体的区块  
+`UpdateBlock(block)`以区块哈希为索引更新区块数据
+---
+```
+func Children(prevBlockHash Hash) ([]IBlock, error)  
+
+func Finalize(blockHash Hash) error  
+ 
+func Chain() (IChainStruct, error)
+```  
+`Children(blockHash)` 根据一个区块哈希获取它的所有子区块  
+`Finalize(blockHash)` 最终共识敲定一个区块  
+`Chain()` 获取主链
