--- a/src/4.2blockbase.md
+++ b/src/4.2blockbase.md
@@ -1,2 +1,40 @@
-# 区块库
-接口定义的代码在[这里](https://github.com/Lawliet-Chan/yu/blob/master/blockchain/interfaces.go#L93)
+# 区块库  
+ 
+`blockbase`存储所有区块中的具体交易数据、 交易执行后的 `event` 和 `error`。     
+### 接口  
+代码在[这里](https://github.com/Lawliet-Chan/yu/blob/master/blockchain/interfaces.go#L93)  
+
+```
+func GetTxn(txnHash Hash) (*SignedTxn, error)
+
+func SetTxn(stxn *SignedTxn) error
+```
+`GetTxn(txnHash)`根据交易的哈希值获取交易数据  
+`SetTxn(stxn)`把交易数据存入区块库（以交易哈希为索引）
+  
+---
+```
+func GetTxns(blockHash Hash) ([]*SignedTxn, error)
+
+func SetTxns(blockHash Hash, txns []*SignedTxn) error
+```
+`GetTxns(blockHash)`根据 区块哈希 获取该区块中的所有 交易数据  
+`SetTxns(blockHash, txns)`把一个区块中的所有交易数据存入区块库中（以交易哈希为索引）
+
+---
+```
+func GetEvents(blockHash Hash) ([]*Event, error)
+
+func SetEvents(events []*Event) error
+```
+`GetEvents(blockHash)`根据 区块哈希 获取该区块中所有的 `event`  
+`SetEvents(events）`把所有`event`存入区块库中（以自增ID为索引）
+
+---
+```
+func GetErrors(blockHash Hash) ([]*Error, error)
+
+func SetError(err *Error) error
+```
+`GetErrors(blockHash)`根据 区块哈希 获取该区块中所有的 `error`    
+`SetError(err)` 把所有`error`存入区块库中（以自增ID为索引）
