--- a/src/4.2blockbase.md
+++ b/src/4.2blockbase.md
@@ -3,7 +3,7 @@
 `blockbase`存储所有区块中的具体交易数据、 交易执行后的 `event` 和 `error`。     
 ### 接口  
 代码在[这里](https://github.com/Lawliet-Chan/yu/blob/master/blockchain/interfaces.go#L93)  
-
+以下为核心功能的接口，开发者如有需求，可自行定制属于自己的区块库。
 ```
 func GetTxn(txnHash Hash) (*SignedTxn, error)
 
