write docs about state

--- a/src/4.0组件.md
+++ b/src/4.0组件.md
@@ -14,3 +14,6 @@
 目前`state`内的存储是用`boltdb`实现的， 而`blockchain`和`blockbase`内的存储使用`sqlite`实现的
 - p2p: 点对点传输网络，用来发现网络中的节点以及传播交易和区块等。 
 - keypair: 公私钥的非对称加密算法，目前支持 `sr25519`和`ed25519`。该组件以interface形式，可自行扩展其他加密算法。  
+
+
+![image](yu系统设计图.png)
