--- a/src/2.快速开始.md
+++ b/src/2.快速开始.md
@@ -5,16 +5,66 @@
 go get github.com/Lawliet-Chan/yu
 ```  
 #### 开发一个链上的 Execution 和 Query  
+```
+import (
+	"github.com/Lawliet-Chan/yu/apps/pow"
+	"github.com/Lawliet-Chan/yu/chain_env"
+	"github.com/Lawliet-Chan/yu/common"
+	"github.com/Lawliet-Chan/yu/context"
+	"github.com/Lawliet-Chan/yu/startup"
+	"github.com/Lawliet-Chan/yu/tripod"
+)
 
+type Example struct {
+	*tripod.DefaultTripod
+}
+
+// 此处定制开发一个 Execution
+func (e *Example) Exec(ctx *context.Context, env *chain_env.ChainEnv) error {
+	caller := ctx.Caller
+        // 将数据存入链上状态中。
+	env.KVDB.Set(e, caller.Bytes(), []byte("yu"))
+        // 向链外发射一个event
+	return ctx.EmitEvent("execute success")
+}
+
+// 此处定制开发一个 Query
+func (e *Example) Qry(ctx *context.Context, env *chain_env.ChainEnv, _ common.Hash) (interface{}, error) {
+	caller := ctx.Caller
+	value, err := env.KVDB.Get(e, caller.Bytes())
+	return string(value), err
+}
+
+```
  
 #### 在main函数中添加 tripods
 
+```
+func NewExample() *Example {
+	df := tripod.NewDefaultTripod("example")
+	e := &Example{df}
+
+        // 此处需要手动将自定义的 Execution 注册到 tripod 中
+	e.SetExecs(e.Exec)
+        // 此处需要手动将自定义的 Query 注册到 tripod 中
+	e.SetQueries(e.Qry)
+
+	return e
+}
+
+func main() {
+	startup.StartUp(pow.NewPow(1024), NewExample())
+}
+```
 
 
 #### 运行
 ```
 go build -o yu-example
 
+// -dc=true 表示使用默认配置，无需另行配置文件。
 ./yu-example -dc=true
  
 ```
+
+至此，一条区块链便启动起来了。 后续可以加入更多区块链节点来构建区块链网络。
