--- a/src/1.介绍.md
+++ b/src/1.介绍.md
@@ -12,7 +12,7 @@ yu(禹) 是一个用golang开发的 简单易用 且 高度可定制化的区块
 
 ### yu(禹)可以定制哪些功能  
 
-- 可使用多种编程语言开发 
+- 可使用多种编程语言开发（尚未完成）  
 - 定制共识算法，包括但不仅限于pow、pos、poa、pbft等等  
 - 自定义区块验证逻辑、交易验证逻辑、从交易池中打包交易的规则
 - 在区块生成周期的各个阶段插入自定义的操作，包括控制何时执行交易
