--- a/src/2.快速开始.md
+++ b/src/2.快速开始.md
@@ -5,7 +5,7 @@
 go get github.com/Lawliet-Chan/yu
 ```  
 #### 开发一个链上的 Execution 和 Query  
-```
+```go
 import (
 	"github.com/Lawliet-Chan/yu/apps/pow"
 	"github.com/Lawliet-Chan/yu/chain_env"
@@ -39,7 +39,7 @@ func (e *Example) Qry(ctx *context.Context, env *chain_env.ChainEnv, _ common.Ha
  
 #### 在main函数中添加 tripods
 
-```
+```go
 func NewExample() *Example {
 	df := tripod.NewDefaultTripod("example")
 	e := &Example{df}
@@ -59,7 +59,7 @@ func main() {
 
 
 #### 运行
-```
+```zsh
 go build -o yu-example
 
 // -dc=true 表示使用默认配置，无需另行配置文件。
