--- a/src/5.3区块周期.md
+++ b/src/5.3区块周期.md
@@ -1,1 +1,99 @@
 # 区块周期 
+
+[前面](4.4tripod.md) 有详细介绍过 `tripod`内关于区块周期的概念。 通过定制区块周期，我们可以实现很多深度的功能， 比如共识算法。 下面我们以
+基于sha256算法的 pow共识 为例，代码原址[在这里](https://github.com/Lawliet-Chan/yu/blob/master/apps/pow/pow.go) 。  
+
+- 初始化区块链，构造创世区块
+```go
+    func (*Pow) InitChain(env *ChainEnv, _ *Land) error {
+    	chain := env.Chain
+    	gensisBlock := &Block{
+    		Header: &Header{},
+    	}
+    	return chain.SetGenesis(gensisBlock)
+    }
+```  
+
+- 区块开始时，构造区块
+```go
+func (p *Pow) StartBlock(block IBlock, env *ChainEnv, _ *Land) (needBroadcast bool, err error) {
+    ......
+
+    // 获取主链中的上一个区块，来确认本次区块的高度等等数据。
+    prevBlock, err := chain.GetEndBlock()
+
+    // 从P2P网络中获取该区块高度上的合法区块（来自其他节点），如果有则表示该高度的区块已经被别的节点挖到，直接返回。
+    pbsht, err := chain.TakeP2pBlocks(height)
+    if err != nil {
+   	logrus.Errorf("get p2p-blocks error: %s", err.Error())
+    }
+    if len(pbsht) > 0 {
+   	block.CopyFrom(pbsht[0])
+   	logrus.Infof("USE P2P block(%s)", block.GetHash().String())
+   	env.StartBlock(block.GetHash())
+   	return
+    }
+    
+    // 如果从P2P网络中发现该区块高度上没有合法的区块， 则需要我们开始挖矿。
+    // 所以这里把 needBroadcast置为true，表示我们会挖到这个区块并将它广播到P2P网络中去，
+    // 具体的广播实现由框架帮我们去代劳了。
+    needBroadcast = true
+
+    ......
+
+    // 从交易池打包交易（最多打包pkgTxnsLimit个)
+    txns, err := pool.Pack(p.pkgTxnsLimit)
+    if err != nil {
+    	return
+    }
+
+    ......
+
+    // 为该区块计算出了一个合法的哈希值（即挖到矿了）
+    nonce, hash, err := spow.Run(block, p.target, p.targetBits)
+    if err != nil {
+        return
+    }
+
+    block.(*Block).SetNonce(uint64(nonce))
+    block.SetHash(hash)
+
+    ......
+
+    return 
+}
+```  
+
+- 区块结束时  
+```go
+func (*Pow) EndBlock(block IBlock, env *ChainEnv, land *Land) error {
+        ......
+
+        // 执行区块中的所有交易
+	err := node.ExecuteTxns(block, env, land)
+	if err != nil {
+		return err
+	}
+
+        // 把该区块持久化存入链中
+	err = chain.AppendBlock(block)
+	if err != nil {
+		return err
+	}
+
+        ......
+        // 清除交易池，为下一个区块的交易准备  
+        return pool.Flush()   
+}
+
+```  
+
+- 最终共识，敲定区块： 
+由于 pow共识 一般是不需要最终共识的这个敲定阶段的， 因为他们有最长子链或者最重子链等证明算力的方式。 所以这里我们 `FinalizeBlock()`不用实现。 
+```go
+func (*Pow) FinalizeBlock(_ IBlock, _ *ChainEnv, _ *Land) error {
+	return nil
+}
+```
+
+到此为止，一个基于 sha256的 pow共识机制 便完成了。
