--- a/src/2.快速开始.md
+++ b/src/2.快速开始.md
@@ -44,8 +44,9 @@ func NewExample() *Example {
 	df := tripod.NewDefaultTripod("example")
 	e := &Example{df}
 
-        // 此处需要手动将自定义的 Execution 注册到 tripod 中
-	e.SetExecs(e.Exec)
+        // 此处需要手动将自定义的 Execution 注册到 tripod 中，
+        // 这里的 10 表示设置该操作所需要消耗的 lei 的数量 （lei 和 gas同义）
+	e.SetExec(e.Exec, 10)
         // 此处需要手动将自定义的 Query 注册到 tripod 中
 	e.SetQueries(e.Qry)
 
@@ -67,4 +68,4 @@ go build -o yu-example
  
 ```
 
-至此，一条区块链便启动起来了。 后续可以加入更多区块链节点来构建区块链网络。
+至此，一条区块链便启动起来了。 后续可以加入更多区块链节点来[构建区块链网络](5.5建立区块链网络.md)。
