add current block

--- a/src/2.快速开始.md
+++ b/src/2.快速开始.md
@@ -8,6 +8,7 @@ go get github.com/Lawliet-Chan/yu
 ```go
 import (
 	"github.com/Lawliet-Chan/yu/apps/pow"
+    . "github.com/Lawliet-Chan/yu/blockchain"
 	"github.com/Lawliet-Chan/yu/chain_env"
 	"github.com/Lawliet-Chan/yu/common"
 	"github.com/Lawliet-Chan/yu/context"
@@ -20,7 +21,7 @@ type Example struct {
 }
 
 // 此处定制开发一个 Execution
-func (e *Example) Exec(ctx *context.Context, env *chain_env.ChainEnv) error {
+func (e *Example) Exec(ctx *context.Context, _ IBlock, env *chain_env.ChainEnv) error {
 	caller := ctx.Caller
         // 将数据存入链上状态中。
 	env.KVDB.Set(e, caller.Bytes(), []byte("yu"))
