--- a/src/5.3execution_and_query.md
+++ b/src/5.3execution_and_query.md
@@ -5,14 +5,15 @@
 定义如下:
 ```go
 type (
-	Execution func(*context.Context, *chain_env.ChainEnv) error
+	Execution func(ctx *Context, currentBlock IBlock, env *ChainEnv) error
 	
-	Query func(*context.Context, *chain_env.ChainEnv, common.Hash) (respObj interface{}, err error)
+	Query func(ctx *Context, env *ChainEnv, blockHash Hash) (respObj interface{}, err error)
 )
 ```  
 - `Execution`在以太坊等其他区块链当中被称作`交易`， 说到底其实就是`一次对于链上状态的写操作`， 所以这样的操作会同步到全网。  
 当需要修改链上状态的时候， 需要调用 `chainEnv.KVDB`来进行状态修改。注意， `chainEnv.kvdb`内的`set`、`get`、 `delete`函数的第一个参数必须为当前 `tripod`
-指针， 比如 [快速开始](2.快速开始.md)里的 `env.KVDB.Set(e, ..., ...)`  
+指针， 比如 [快速开始](2.快速开始.md)里的 `env.KVDB.Set(e, ..., ...)`   
+`currentBlock`为当前交易所在的区块。   
 当需要发送 `event`到链外的时候，调用 `ctx.EmitEvent()`。  
 
 - `Query`就是链上查询，它不对链上状态有任何修改，所以该操作并不会被同步到全网。 `Query`的参数比 `Execution`多一个 `common.Hash`， 这个参数是个 
