config the log level

--- a/src/5.1.1节点配置.md
+++ b/src/5.1.1节点配置.md
@@ -9,13 +9,17 @@
 	// serve http port
 	HttpPort string `toml:"http_port"`
 	// serve websocket port
-	WsPort string `toml:"ws_port"
+	WsPort string `toml:"ws_port"`
+    // log out level:
+    // panic, fatal, error, warn, info, debug, trace
+    LogLevel string `toml:"log_level"`
     
-        LeiLimit uint64 `toml:"lei_limit"`
+    LeiLimit uint64 `toml:"lei_limit"`
 ````  
 - Runmode: 为节点运行方式， 0为单节点形式运行，1为`master-worker`形式运行（`master-worker`形式暂不支持） 
 - HttpPort: http监听地址，服务于外部调用的端口配置。
-- WsPort: websocket监听地址，服务于外部调用的端口配置。
+- WsPort: websocket监听地址，服务于外部调用的端口配置。 
+- LogLevel: 打印Log的等级，从上到下依次有 `panic`, `fatal`, `error`, `warn`, `info`, `debug`, `trace`
 - LeiLimit： 每个区块里可以被消耗的 `lei` 的上限
 
 #### 配置示例：
