--- a/src/2.快速开始.md
+++ b/src/2.快速开始.md
@@ -2,18 +2,18 @@
 
 #### 安装 
 ```
-go get github.com/Lawliet-Chan/yu
+go get github.com/yu-org/yu
 ```  
 #### 开发一个链上的 Execution 和 Query  
 ```go
 import (
-	"github.com/Lawliet-Chan/yu/apps/pow"
-    . "github.com/Lawliet-Chan/yu/blockchain"
-	"github.com/Lawliet-Chan/yu/chain_env"
-	"github.com/Lawliet-Chan/yu/common"
-	"github.com/Lawliet-Chan/yu/context"
-	"github.com/Lawliet-Chan/yu/startup"
-	"github.com/Lawliet-Chan/yu/tripod"
+	"github.com/yu-org/yu/apps/pow"
+	. "github.com/yu-org/yu/core/types"
+	"github.com/yu-org/yu/chain_env"
+	"github.com/yu-org/yu/common"
+	"github.com/yu-org/yu/context"
+	"github.com/yu-org/yu/startup"
+	"github.com/yu-org/yu/tripod"
 )
 
 type Example struct {
@@ -21,10 +21,10 @@ type Example struct {
 }
 
 // 此处定制开发一个 Execution
-func (e *Example) Exec(ctx *context.Context, _ IBlock, env *chain_env.ChainEnv) error {
+func (e *Example) Exec(ctx *context.Context, _ *CompactBlock) error {
 	caller := ctx.Caller
         // 将数据存入链上状态中。
-	env.KVDB.Set(e, caller.Bytes(), []byte("yu"))
+	e.State.Set(e, caller.Bytes(), []byte("yu"))
         // 向链外发射一个event
 	return ctx.EmitEvent("execute success")
 }
@@ -32,7 +32,7 @@ func (e *Example) Exec(ctx *context.Context, _ IBlock, env *chain_env.ChainEnv) 
 // 此处定制开发一个 Query
 func (e *Example) Qry(ctx *context.Context, env *chain_env.ChainEnv, _ common.Hash) (interface{}, error) {
 	caller := ctx.Caller
-	value, err := env.KVDB.Get(e, caller.Bytes())
+	value, err := e.State.Get(e, caller.Bytes())
 	return string(value), err
 }
 
@@ -48,7 +48,7 @@ func NewExample() *Example {
 	// 此处需要手动将自定义的 Execution 注册到 tripod 中，
 	// 这里的 10 表示设置该操作所需要消耗的 lei 的数量 （lei 和 gas 同义）
 	e.SetExec(e.Exec, 10) 
-    // 此处需要手动将自定义的 Query 注册到 tripod 中
+	// 此处需要手动将自定义的 Query 注册到 tripod 中
 	e.SetQueries(e.Qry)
 
 	return e
