--- a/src/4.1blockchain.md
+++ b/src/4.1blockchain.md
@@ -1,13 +1,13 @@
 # 区块链  
-`blockchain`组件内部有两个部分构成，一部分缓存区，专门用来储存来自P2P网络中发送来的区块数据（存入缓存区之前已经经过验证）以备处理。另一个部分
-就是真正的区块链持久化存储，全网统一维护的链结构。  
+`blockchain`组件就是区块链结构的持久化存储，全网统一维护的链结构。 注意：该结构中并不存储具体的交易数据和交易执行的结果，这部分数据存储在`yudb`中。  
+
 
 
 
 
 
 ### 接口  
-代码在[这里](https://github.com/Lawliet-Chan/yu/blob/master/blockchain/interfaces.go#L51)  
+具体实现的代码在[这里](https://github.com/yu-org/yu/blob/master/core/blockchain/blockchain.go)  
 `blockchain`实现了基本的链结构的存储和处理逻辑。以下为核心功能的接口，开发者如有需求，可自行定制属于自己的链存储方式和处理逻辑： 
 
 ```go
@@ -23,30 +23,17 @@ func ConvergeType() ConvergeType
           
           
 ```go
-func GetGenesis() (IBlock, error)
-func SetGenesis(b IBlock) error
+func GetGenesis() (*CompactBlock, error)
+func SetGenesis(b *CompactBlock) error
 ```
 从链内获取创世区块，把创世区块存入链。
 
-
-##
-
-
-```go
-func InsertBlockFromP2P(ib IBlock) error
-func TakeP2pBlocksBefore(height BlockNum) (map[BlockNum][]IBlock, error)
-func TakeP2pBlocks(height BlockNum) ([]IBlock, error)
-```  
-`InsertBlockFromP2P(block)`将从P2P网络收到的经过验证的区块纳入一个缓存区，以备后续处理。  
-`TakeP2pBlocksBefore(height)`将从上述缓存区取走高度 < `height`的所有区块。  
-`TakeP2pBlocks(height)`将从上述缓存区取走高度 = `height`的所有区块。
-
 ##
 
 ```go
-func AppendBlock(b IBlock) error
-func GetBlock(blockHash Hash) (IBlock, error)
-func UpdateBlock(b IBlock) error
+func AppendBlock(b *CompactBlock) error
+func GetBlock(blockHash Hash) (*CompactBlock, error)
+func UpdateBlock(b *CompactBlock) error
 ``` 
 
 `AppendBlock(block)`将区块加入到链的末尾  
@@ -57,11 +44,14 @@ func UpdateBlock(b IBlock) error
 ##
 
 ```go
-func Children(prevBlockHash Hash) ([]IBlock, error)  
+func Children(prevBlockHash Hash) ([]*CompactBlock, error)  
 func Finalize(blockHash Hash) error  
-func Chain() (IChainStruct, error)
+func GetEndBlock() (*CompactBlock, error)
+func LastFinalized() (*CompactBlock, error)
 ```  
 
 `Children(blockHash)` 根据一个区块哈希获取它的所有子区块  
 `Finalize(blockHash)` 最终共识敲定一个区块  
-`Chain()` 获取主链
+`GetEndBlock()` 获取最后一个未敲定区块  
+`LastFinalized()` 获取最后一个敲定的区块
+
