--- a/src/4.2yudb.md
+++ b/src/4.2yudb.md
@@ -1,8 +1,8 @@
 # 区块库  
  
-`blockbase`存储所有区块中的具体交易数据、 交易执行后的 `event` 和 `error`。     
+`yudb`存储所有区块中的具体交易数据、 交易执行后的 `event` 和 `error`。     
 ### 接口  
-代码在[这里](https://github.com/Lawliet-Chan/yu/blob/master/blockchain/interfaces.go#L93)  
+代码在[这里](https://github.com/yu-org/yu/blob/master/core/yudb/yudb.go)  
 以下为核心功能的接口，开发者如有需求，可自行定制属于自己的区块库。
 ```go
 func GetTxn(txnHash Hash) (*SignedTxn, error)
