--- a/src/4.3txpool.md
+++ b/src/4.3txpool.md
@@ -1,5 +1,5 @@
 # 交易池  
-接口代码定义在[这里](https://github.com/Lawliet-Chan/yu/blob/master/txpool/txpool.go)  
+接口代码定义在[这里](https://github.com/yu-org/yu/blob/master/core/txpool/txpool.go)  
 以下为核心功能的接口，开发者如有需求，可自行定制属于自己的交易池
 
 ```go
@@ -11,7 +11,7 @@ func NecessaryCheck(stxn *SignedTxn) error
 交易重复。前三者如果检查不通过会返回错误， 交易重复的时候会忽略该条消息但是不会返回错误。   
 `TripodsCheck()` 基础检查完毕之后，会进行tripods检查，此为开发者自行定义的交易检查规则。  
 `NecessaryCheck()`表示必要性检查，只检查交易数据是否过大、签名是否合法以及 tripods检查。 在节点收到来自P2P网络的区块之后，同步
-区块中的交易数据时做该检查，检查后直接存入`blockbase`。
+区块中的交易数据时做该检查，检查后直接存入`yudb`。
 
 ## 
 
@@ -34,7 +34,7 @@ func PackFor(numLimit uint64, filter func(*SignedTxn) error) ([]*SignedTxn, erro
 
 ```go
 func GetTxn(hash Hash) (*SignedTxn, error)
-func Flush() error
+func Reset(*CompactBlock) error
 ```
 `GetTxn(hash)` 根据交易哈希值 获取交易数据。  
-`Flush()` 删除被打包的交易。
+`Reset(*CompactBlock)` 在交易池中清除给定区块中的交易，因为它们已经被打包。
