--- a/src/4.4tripod.md
+++ b/src/4.4tripod.md
@@ -8,20 +8,22 @@
 是只有在创世区块的时候才被调用的，后面三个是每次区块都会被调用。 （个性化共识算法便可以用区块生命周期来实现）   
 3. 自定义 `交易`(Execution) 和 `查询`(Query) 
 #### 接口  
-代码定义在[这里](https://github.com/Lawliet-Chan/yu/blob/master/tripod/tripod.go)  
+代码定义在[这里](https://github.com/yu-org/yu/blob/master/core/tripod/tripod.go)  
 
 ```go
 func GetTripodMeta() *TripodMeta
 func Name() string
+func SetChainEnv(env *ChainEnv)
 ```
-`GetTripodMeta()`返回一个`tripod`的元数据，该元数据定义在[这里。](https://github.com/Lawliet-Chan/yu/blob/master/tripod/tripod_meta.go#L11)
+`GetTripodMeta()`返回一个`tripod`的元数据，该元数据定义在[这里。](https://github.com/yu-org/yu/blob/master/core/tripod/tripod_meta.go)
 该元数据中囊括了 `Execution` 和 `Query`列表。  
-`Name()`返回`tripod`的名称。
+`Name()`返回`tripod`的名称。  
+`SetChainEnv(*ChainEnv)`将`ChainEnv`装填进`tripod`中，方便后续调用。(`ChainEnv`介绍在[context与chainEnv](5.2context与chainEnv.md))
 
 ## 
 ```go
 func CheckTxn(*SignedTxn) error
-func VerifyBlock(block IBlock, env *ChainEnv) bool
+func VerifyBlock(block *CompactBlock) bool
 ``` 
 `checkTxn()`是开发者自定义的交易检查逻辑，前面的章节提到过当外部有交易进来插入`txpool`的时候，会执行`BaseChack` 和 `TripodsCheck` 这两步检查，
 而`TripodsCheck`便是在这里定义，每个`tripod`都可以定义自己的交易检查逻辑。  
@@ -30,10 +32,10 @@ func VerifyBlock(block IBlock, env *ChainEnv) bool
 
 ##  
 ```go
-func InitChain(env *ChainEnv, land *Land) error
-func StartBlock(block IBlock, env *ChainEnv, land *Land) (needBroadcast bool, err error)
-func EndBlock(block IBlock, env *ChainEnv, land *Land) error
-func FinalizeBlock(block IBlock, env *ChainEnv, land *Land) error
+func InitChain() error
+func StartBlock(block *CompactBlock) (needBroadcast bool, err error)
+func EndBlock(block *CompactBlock) error
+func FinalizeBlock(block *CompactBlock) error
 ```  
 `InitChain()`只会在区块链启动的时候被调用一次，专门用来定义处理`创世区块`。  
 `StartBlock()`定义区块生成时的阶段的逻辑，并且需要返回一个类型为`bool`的`needBroadcast`返回值   告诉框架是否需要广播区块。一般如果是本地挖到的区块，是需要广播出去的，如果是从其他节点
