--- a/src/5.1.2各组件配置.md
+++ b/src/5.1.2各组件配置.md
@@ -5,31 +5,27 @@
 ```go
 type BlockchainConf struct {
 	ChainDB         SqlDbConf `toml:"chain_db"`
-	BlocksFromP2pDB SqlDbConf `toml:"blocks_from_p2p_db"`
 }
 ``` 
 - ChainDB: 用来存储区块链的sql数据库   
-- BlocksFromP2pDB: 用来缓存来自P2P网络的其他合法区块的sql数据库  
 
-#### `blockbase`配置源码:
+#### `yudb`配置源码:
 ```go
-type BlockBaseConf struct {
+type yudbConf struct {
 	BaseDB SqlDbConf `toml:"base_db"`
 }
 ```  
-- BaseDB: 用来存储 `blockbase` 的sql数据库。  
+- BaseDB: 用来存储 `yudb` 的sql数据库。  
 
 #### `txpool`配置源码:  
 ```go
 type TxpoolConf struct {
 	PoolSize   uint64    `toml:"pool_size"`
 	TxnMaxSize int       `toml:"txn_max_size"`
-	Timeout    int       `toml:"timeout"`
 }
 ```  
 - PoolSize: 交易池池大小，如果超过该大小，则后续交易将不会被放进交易池  
 - TxnMaxSize：最大交易的数据量大小，如果一条交易超过该配置，则不会被放进交易池
-- Timeout: 交易池超时时间，超过该时间则交易不会被放进交易池（目前该功能暂时未实现）
 
 
 #### `state`配置源码: 
@@ -47,13 +43,11 @@ type StateConf struct {
 sql_db_type = "sqlite"
 dsn = "chain.db"
 
-[block_chain.blocks_from_p2p_db]
-sql_db_type = "sqlite"
-dsn = "blocks_from_p2p.db"
 
-[block_base.base_db]
+
+[yu_db.base_db]
 sql_db_type = "sqlite"
-dsn = "blockbase.db"
+dsn = "yudb.db"
 
 [txpool]
 pool_size = 2048
