--- a/src/5.2context与chainEnv.md
+++ b/src/5.2context与chainEnv.md
@@ -4,11 +4,11 @@
 的用途。  
 
 
-[Context](https://github.com/Lawliet-Chan/yu/tree/master/context) 表示与链外交互的上下文信息。 它包括 `调用者地址`、`传入的参数`、
+[Context](https://github.com/yu-org/yu/blob/master/core/context) 表示与链外交互的上下文信息。 它包括 `调用者地址`、`传入的参数`、
 `event`、`error`。  
  - 客户端调用者（即发起交易的人）传入的参数会以json的形式序列化，并按 `string -> interface{}` 这样map的方式存在 `context` 中。  
  我们通过`context`获取 客户端调用者的`密码学地址` 和 调用者传入的`参数`。  从`context`
- 获取参数的时候可以以[任意go基础类型](https://github.com/Lawliet-Chan/yu/blob/master/context/params.go#L18-L257) 去获取参数。
+ 获取参数的时候可以以[任意go基础类型](https://github.com/yu-org/yu/blob/master/core/context/params.go) 去获取参数。
  如果参数类型为自定义的，则需要先通过``context.Get(paramName)``获取到 `interface`再自行转化。可以直接获取参数的类型有:
  ```go
     common.Hash([32]byte)
@@ -24,5 +24,5 @@
    
  - 同时如果需要向链外返回 `event`的时候， 也需要通过`context`来完成(``ctx.EmitEvent(interface{})``)。   
      
-[ChainEnv](https://github.com/Lawliet-Chan/yu/blob/master/chain_env/env.go) 包含了所有链相关的一切环境组件，其中有 `blockchain`、
- `blockbase`、 `txpool`、 `state`等。 可供开发者直接操作到框架底层的组件。 
+[ChainEnv](https://github.com/yu-org/yu/blob/master/core/chain_env/env.go) 包含了所有链相关的一切环境组件，其中有 `blockchain`、
+ `yudb`、 `txpool`、 `state`、`Execute` 、 `P2pNetwork`。 可供开发者直接操作到框架底层的组件。 
