--- a/src/5.5.3节点3.md
+++ b/src/5.5.3节点3.md
@@ -22,13 +22,9 @@ path = "./nk_db.db"
 sql_db_type = "sqlite"
 dsn = "chain.db"
 
-[block_chain.blocks_from_p2p_db]
+[yu_db.base_db]
 sql_db_type = "sqlite"
-dsn = "blocks_from_p2p.db"
-
-[block_base.base_db]
-sql_db_type = "sqlite"
-dsn = "blockbase.db"
+dsn = "yudb.db"
 
 [txpool]
 pool_size = 2048
